# open-research-data-template

./: .Rprofile  .gitattributes  .gitignore  .lycheeignore  .lycheerc.toml  .nojekyll  .pre-commit-config.yaml  .prettierignore  .zenodo.json  AGENTS.md  CHANGELOG.html  CHANGELOG.md  CHANGELOG.template.md  CITATION.cff  CITATION.template.cff  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  FEATURE_REQUEST.md  LICENSE-AGPL.html  LICENSE-CCBY.html  LICENSE.html  README.md  README.template.html  README.template.md  SECURITY.html  SECURITY.md  TODO.md  _brand.yml  _quarto.yml  cliff.toml  documentation.md  example.env  favicon.txt  index.html  index.qmd  lychee.toml  package-lock.json  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json  install.sh
.devcontainer/quarto-computing-dependencies/: devcontainer-feature.json  install.sh
.devcontainer/quarto-computing-dependencies-ord/: devcontainer-feature.json  install.sh
.devcontainer/uv/: devcontainer-feature.json  install.sh
.github/: MAINTAINERS.md  TEMPLATE_MAINTENANCE.md  _quarto.yml  copilot-instructions.md  labeler.yml
.github/ISSUE_CONTENT/: README.md  (+1 more)
docs/: codelist.txt
documentation/: agent-release-workflow.qmd  data-dictionary.template.qmd  index.qmd  repositories.template.md
project-management/: communication.html  communication.md  communication.template.md  people.html  people.md  people.template.md  project-report.html  project-report.md  project-report.template.md  tools.html  tools.md  tools.template.md
renv/: settings.json
scripts/: release_site_archive.py
(+38 files in other folders)
